Fix header not being fixed on Firefox

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -163,3 +163,8 @@ html[data-theme="dark"] {
 :global(.sl-markdown-content) .sl-link-button:not(:where(p *)) {
   margin-block: 1rem;
 }
+
+/* Something adds position: relative only in the built app, not in the dev server! */
+#header {
+  position: fixed !important;
+}
